# Scrapping-Lands

./: .env.example  .gitignore  EXECUTION_GUIDE.md  README.md  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
api/: index.py
config/: indiana.yaml
data/: .gitkeep
data/geo/: indiana_counties_mock.geojson
docs/: API_KEYS_GUIDE.md  DEDUPLICATION_ALGORITHM.md  FETCHER_IMPLEMENTATION_GUIDE.md  PHASE3_OWNER_IDENTIFICATION.md  PHASE3_SUMMARY.md  WORKFLOW.md
migrations/: 002_corporate_registry.sql  002_corporate_registry_simple.sql  003_contacts.sql
output/: dados_propriedades_IN_20251209_165135.csv  indiana_final_leads_20251209_155257.csv  indiana_final_leads_20251209_155820.csv  propriedades_donos_IN_20251209_165136.csv  propriedades_donos_contatos_IN_20251209_165137.csv
scripts/: check_schema.py  check_websites.py  create_owners_from_parks.py  create_schema.py  enrich_contacts.py  enrich_corporate.py  generate_csvs.py  identify_owners.py  populate_parks_raw.py  process_to_master.py  run_export.py  run_ingest.py  run_migration.py  show_contacts.py  test_contacts.py  test_e2e_summary.py  test_inbiz_search.py  test_phase3.py
src/: __init__.py  database.py  models.py  schema.sql
src/enrichment/: __init__.py  contact_finder.py  corporate_registry.py
src/export/: __init__.py  export_manager.py
src/ingestion/: __init__.py  google_places.py  google_places_new.py  osm_query.py
src/owners/: __init__.py  base_fetcher.py  county_mapper.py  orchestrator.py
src/owners/fetchers/: __init__.py  generic_fetcher.py
src/processing/: __init__.py  deduplication.py
web/: app.py
web/static/: .gitkeep
web/templates/: dashboard.html  index.html
