[project]
name = "scrappinglands"
version = "1.0.0"
description = "Land scraping and lead generation tool"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
